Fix issue #12652 - Sidebar spacing
Fix spacing on sidebar

Adding some spacing on the sidebar below each of the descriptions. This
corrects issue #12652

--- a/packages/components/src/base-control/style.scss
+++ b/packages/components/src/base-control/style.scss
@@ -18,6 +18,6 @@
 	.components-base-control__help {
 		margin-top: -$grid-size;
 		font-style: italic;
-		margin-bottom: 0;
+		margin-bottom: 20px;
 	}
 }
